# OliveDB

./: .gitignore  README.md
olivedb/: CMakeLists.txt
olivedb/CMake/: CMakeLists.txt
olivedb/docs/: vectordb.md
olivedb/docs/tutorials/: README.md
olivedb/python/: example.cpp  setup.py  test.py
olivedb/scripts/: compile.sh  install.sh  tests.sh
olivedb/src/database/: db.cpp  db.h  metadata.cpp  metadata.h
olivedb/src/engines/: engine.cpp  engine.h  query.cpp
olivedb/src/engines/engine/: engine.cpp  engine.h
olivedb/src/engines/indexer/: indexer.cpp  indexer.h
olivedb/src/engines/query/: query.h
olivedb/src/engines/storage/: storage.h
olivedb/src/headers/database/: db.h
olivedb/src/headers/engines/: engine.h  query.h  storage.h
olivedb/src/headers/vector/: vec.h  vector.h
olivedb/src/indexer/: indexer.cpp  indexer.h
olivedb/src/metadata/: metadata.h  modifier.cpp  modifier.h
olivedb/src/preprocess/: preprocess.cpp  preprocess.h
olivedb/src/query/: query.h
olivedb/src/storage/: storage.cpp  storage.h
olivedb/src/vector/: vec.cpp  vec.h  vector.cpp
olivedb/tests/: CMakeLists.txt  test1.cpp  tests.cpp
